--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
     <title>נאנקינג טאי צ'י</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Short summary of your site, ~150 chars" />
-    <meta name="keywords" content="Comma-separated relevant keywords" />
-    <meta name="author" content="Your name or organization" />
+    <meta
+      name="description"
+      content="נקנאינג טאי צ'י - בית הספר לאומנויות לחימה סיניות בהוראת אפי דינר"
+    />
+    <meta
+      name="keywords"
+      content="נאנקינג טאי צ', טאי צ'י, אפי דינר, צ'י קונג, פה קואה, אומנויות לחימה, לחימה, חוג, חוג למבוגרים, איזור השרון, קדימה צורן"
+    />
+    <meta name="author" content="נאנקינג טאי צ'י" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Title for social sharing" />
+    <meta
+      property="og:title"
+      content="נקנאינג טאי צ'י - בית הספר לאומנויות לחימה"
+    />
     <meta
       property="og:description"
-      content="Short social summary, ~150 chars"
+      content="בית הספר של אפי דינר לאומנויות לחימה סיניות טאי צ'י, צ'י קונג, ופה קואה. בית הספר ממוקם באיזור השרון"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="Full website URL" />
+    <meta property="og:url" content="https://nankingtaichi.github.io/" />
     <meta
       property="og:image"
       content="Image URL, preferably 1200x630px, PNG/JPG"
